--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-34.0.0.tar.gz",
     "react-native-datepicker": "^1.7.2",
     "react-native-gesture-handler": "~1.3.0",
+    "react-native-paper": "^3.1.1",
     "react-native-reanimated": "~1.1.0",
     "react-native-screens": "1.0.0-alpha.22",
     "react-native-web": "^0.11.4",
     "react-navigation": "^4.0.10",
     "react-navigation-drawer": "^2.2.2",
+    "react-navigation-material-bottom-tabs": "^2.1.5",
     "react-navigation-stack": "^1.9.1",
     "react-navigation-tabs": "^2.5.5"
   },
