--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo/vector-icons": "^10.0.0",
     "expo": "^34.0.1",
     "prop-types": "^15.7.2",
     "react": "16.8.3",
@@ -18,6 +19,7 @@
     "react-native-paper": "^3.1.1",
     "react-native-reanimated": "~1.1.0",
     "react-native-screens": "1.0.0-alpha.22",
+    "react-native-vector-icons": "^6.6.0",
     "react-native-web": "^0.11.4",
     "react-navigation": "^4.0.10",
     "react-navigation-drawer": "^2.2.2",
