--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
     "name": "Artero app",
-    "slug": "art",
+    "slug": "artero",
     "privacy": "public",
     "sdkVersion": "34.0.0",
     "platforms": [
